--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,23 @@ header nav a{
 header nav a:hover{
     color: #5A67D8;
 }
+
+.overview-hero .container{
+    display: flex;
+    background-color: #E2E8F0;
+    align-items: center;
+    gap: 24px;
+    padding: 20px 0;
+}
+
+.overview-hero-image img{
+    width: 200px;
+    height: 200px;
+    display: block;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.overview-hero-text{
+    padding: 20px;
+}
