--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,30 @@ header nav a:hover{
     color: #48BB78;
     font-size: 21px;
 }
+
+.testing{
+    padding: 30px 0;
+}
+
+.testing .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: #4A5568;
+    padding: 20px;
+    border-radius: 6px;
+}
+
+.testing .btn{
+    color: #fff;
+    background-color: #48BB78;
+    display: inline-flex;
+    padding: 12px 28px;
+    width: 86px;
+    height: 24px;
+    border: 0;
+    border-radius: 5px;
+    text-decoration: none;
+    
+}
