--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,13 @@ header nav a:hover{
     color: #5A67D8;
 }
 
+.overview-hero{
+    background-color: #E2E8F0;
+}
+
 .overview-hero .container{
     display: flex;
-    background-color: #E2E8F0;
+    
     align-items: center;
     gap: 24px;
     padding: 20px 0;
@@ -55,6 +59,10 @@ header nav a:hover{
 }
 
 .overview-hero-text{
+    padding: 20px;
+}
+
+.learn-about .container{
     padding: 20px;
 }
 
@@ -87,6 +95,7 @@ header nav a:hover{
 }
 
 .testing{
+    background-color: #4A5568;
     padding: 30px 0;
 }
 
@@ -95,7 +104,7 @@ header nav a:hover{
     justify-content: space-between;
     align-items: center;
     color: #fff;
-    background-color: #4A5568;
+    
     padding: 20px;
     border-radius: 6px;
 }
