Added javascript for newsletter

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,10 @@ header nav a:hover{
     
 }
 
+.stories{
+    padding: 30px;
+}
+
 .stories article{
     display: flex;
     align-items: center;
